--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/port.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
     <script src="main.js"></script>
 
     <style>
@@ -53,18 +54,18 @@
             <div class="col1">
                 <div>
                     <img id="p1" src="https://imgplaceholder.com/300x300/cccccc/757575/glyphicon-file" alt="ImgPlaceholder"></a>
-                        <div id="text1">testing1
+                        <div id="text1">Future Info 1
                             </div>    
                                 </div>
                 
                     <div>
                         <img id-"p2" src="https://imgplaceholder.com/300x300/cccccc/757575/glyphicon-ok" alt="ImgPlaceholder"></a>
-                        <div id="text2">testing2
+                        <div id="text2">Future Info 2
                             </div>  
                                 </div>
                     
                         <img id="p3" src="https://imgplaceholder.com/300x300/cccccc/757575/glyphicon-barcode" alt="ImgPlaceholder"></a>
-                        <div id="text3">testing3
+                        <div id="text3">Future Info 3
                             </div>  
                                 </div>
 
@@ -73,13 +74,13 @@
                 <div class="col2">
                     <div>
                         <img id="p4" src="https://imgplaceholder.com/300x300/cccccc/757575/glyphicon-book" alt="ImgPlaceholder"></a>
-                        <div id="text4">testing4
+                        <div id="text4">Future Info 4
                             </div>  
                                 </div>
 
                         <div>
                         <img id="p5" src="https://imgplaceholder.com/300x300/cccccc/757575/glyphicon-list-alt" alt="ImgPlaceholder"></a>
-                        <div id="text5">testing5
+                        <div id="text5">Future Info 5
                             </div>      
                                 </div>
                 </div>
